resources/css/custom-typography.css
@font-face {
    font-family: 'Canela';
    src: url(/fonts/Canela-Light-Web.woff2) format('woff2');
    font-weight: 300;
    unicode-range: U+0020-007F; /* The bare minimum for the English Language */
    font-display: swap;
}
@font-face {
    font-family: 'Proxima Nova';
    src: url(/fonts/Proxima-Nova.woff2) format('woff2');
    font-weight: 400;
    unicode-range: U+0020-007F; /* The bare minimum for the English Language */
    font-display: swap;
}
@font-face {
    font-family: 'Proxima Nova';
    src: url(/fonts/Proxima-Nova-Black.woff2) format('woff2');
    font-weight: 900;
    unicode-range: U+0020-007F; /* The bare minimum for the English Language */
    font-display: swap;
}

.serif       { font-family: var(--serif); }
.sans-serif  { font-family: var(--sans-serif); }

body {
    font: 300 16px/21px var(--font-family-proxima)
}
h1, h2, h3, h4, h5, h6 {
    font-family: var(--font-family-canela);
    font-weight: 300
}

.title-1.canela {
    font: 36px/42px var(--font-family-canela);
    letter-spacing: 1.09px;
}
.title-2.canela {
    font: 24px/36px var(--font-family-canela);
    letter-spacing: 0.6px;
}
.title-3.canela {
    font: 18px/36px var(--font-family-canela);
    letter-spacing: 0.45px;
}
.title-1.proxima {
    font: 900 24px/46px var(--font-family-proxima);
    letter-spacing: 1.07px;
}
.title-2.proxima {
    font: 900 18px/24px var(--font-family-proxima);
    letter-spacing: 0.6px;
}
.title-3.proxima {
    font: 900 12px/27px var(--font-family-proxima);
    letter-spacing: 0.92px;
}
.content-1 {
    font: 20px/30px var(--font-family-proxima);
}
.content-2 {
    font: 16px/21px var(--font-family-proxima);
}
.content-3 {
    font: 13px/18px var(--font-family-proxima);
}
.content-4 {
    font: 11px/16px var(--font-family-proxima);
}
.button-font-1 {
    font: 900 15px/18px var(--font-family-proxima);
    letter-spacing: 0.92px;
}
.button-font-2 {
    font: 900 14px/17px var(--font-family-proxima);
    letter-spacing: 0.86px;
}
.button-font-3 {
    font: 900 12px/15px var(--font-family-proxima);
    letter-spacing: 0.74px;
}
.button-font-4 {
    font: 900 11px/13px var(--font-family-proxima);
    letter-spacing: 0.68px;
}

.regular { font-weight: var(--font-weight); }
.light   { font-weight: var(--light-font-weight); }
.medium  { font-weight: var(--medium-font-weight); }
.bold    { font-weight: var(--bold-font-weight); }

.titleize { text-transform: capitalize; }
.shout { text-transform: uppercase; }
.whisper { text-transform: lowercase; }
.strike { text-decoration: line-through; }

.shadow { text-shadow: 0 2px 2px var(--darken-3); }
.engrave-2 { text-shadow: 0 -1px 0 var(--darken-2); }

.crush { letter-spacing: -0.05em; }
.letter-spacing-0    { letter-spacing: 0;     }
.letter-spacing-half { letter-spacing: 0.5px; }
.letter-spacing-1    { letter-spacing: 1px;   }
.letter-spacing-2    { letter-spacing: 2px;   }
.letter-spacing-3    { letter-spacing: 3px;   }
.letter-spacing-4    { letter-spacing: 4px;   }
.letter-spacing-5    { letter-spacing: 5px;   }
.letter-spacing-6    { letter-spacing: 6px;   }
.letter-spacing-7    { letter-spacing: 7px;   }

.line-length { /* used on headers & paragraphs to make sure they're not too wide */
  max-width: 600px;
}

.list-reset > dd:after {
    display: block;
    content: '';
}

.font-style-normal { font-style: normal; }

:root {
    --serif: serif;
    --sans-serif: sans-serif;

    --font-family-canela: 'Canela', 'Times New Roman', Times, serif;
    --font-family-proxima: 'Proxima Nova', Arial, sans-serif;

    --darken-2: rgba(0, 0, 0, .125);
    --darken-3: rgba(0, 0, 0, .375);

    --font-weight: var(--medium-font-weight);

    --light-font-weight: 300;
    --medium-font-weight: 400;
    --bold-font-weight: 700;
}

